<resources>
    <string name="app_name">MMA</string>
    <string name="action_settings">Settings</string>


    <!-- Strings related to login -->
    <string name="default_topic">rooms:lobby</string>
    <string name="default_url">ws://hub-nightly-public-alb-1826126491.ap-southeast-1.elb.amazonaws.com/socket/websocket</string>
    <string name="netwatch_target_ping_server_ip_add">8.8.8.8</string>
    <string name="netwatch_lost_connection">No internet connection</string>
    <string name="nav_home">Home</string>
    <string name="nav_nfc">NFC</string>
    <string name="nav_camera">Camera</string>
    <string name="nav_asset_information">Asset Information</string>
    <string name="nav_setting">Setting</string>
    <string name="nav_help">Help</string>
    <string name="nav_lastsync">Last Sync: </string>

    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Notification Activity -->
    <string name="noti_empty">You do not have any notifications yet.</string>
    <string name="passcode">Enter pin code</string>
    <string name="re_match_passcode">Re-match your pin code</string>

    <!-- Login Activity-->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">login</string>

    <!-- NFC Reading -->
    <string name="ready_to_scan">Ready To Scan</string>
    <string name="hold_ur_phone_near_nfc">Hold your phone near the NFC tag.</string>
    <string name="cancel">cancel</string>

    <!-- Loading -->
    <string name="checking_with_backend">Checking with backend.</string>
    <string name="wait">Please wait....</string>

    <!--PM Work order completion -->
    <string name="work_complete">Work Order Completion</string>
    <string name="start_datetime">Start Date/Time</string>
    <string name="end_datetime">End Date/Time</string>
    <string name="close">Close</string>
    <string name="temp_text">Lorem ipsum dolor sit amet, consectetur elit Quisque a quam ut enim maximus </string>
    <!-- CM Work orde completion -->
    <string name="arrival_date_time">Arrival Date/Time</string>
    <string name="job_completion_date_time">Job Completion Date/Time</string>

    <!-- Asset Information -->
    <string name="asset_information">Asset Information</string>
    <string name="component">Component</string>
    <string name="serial_number">Serial Number:</string>
    <string name="component_type">Component Type:</string>
    <string name="component_status">Component Status:</string>
    <string name="component_desc">Component Description</string>
    <string name="mso_number_complete">MSO Number</string>
    <string name="panel_id_complete">Panel ID</string>
    <string name="schedule_date">Schedule Date</string>
    <string name="schedule_type">Schedule Type</string>
    <string name="mso_start_date_time">MSO Start Date/Time</string>
    <string name="mso_end_date_time">MSO End Date/Time</string>
    <string name="reported_problem_code_complete">Reported Problem Code</string>
    <string name="fault_code">Fault Code</string>
    <string name="remedy_action">Remedy Action</string>
    <string name="third_party_fault_complete">Third Party Fault</string>
    <string name="location_complete">Location</string>

    <!-- CM value for step-1 -->
    <string name="mso_information">MSO Information</string>
    <string name="mso_number">MSO Number:</string>
    <string name="panel_id">Panel ID:</string>
    <string name="fault_type">Fault Type:</string>
    <string name="mso_priority">MSO Priority:</string>
    <string name="allowable_resolution_date_time">Allowable Resolution Date/Time</string>
    <string name="allowable_respond_date_time">Allowable Respond Date/Time</string>
    <string name="fault_detected_date_time">Fault Detected Date/Time</string>
    <string name="mso_notified_date_time">MSO Notified Date/Time</string>
    <string name="bus_stop_number">Bus Stop Number:</string>
    <string name="location">Location:</string>
    <string name="attach_pre_maintenance_photo">Attach Pre-Maintenance Photo:</string>

    <!-- CM value for step-2 -->
    <string name="maintenance_work_information">Maintenance Work Information</string>
    <string name="acknowledged_by">Acknowledged By:</string>
    <string name="acknowledge_date_time">Acknowledge Date/Time</string>
    <string name="first_respond_date_time">1st Respond Date/Time</string>
    <string name="reported_problem_code">Reported Problem Code:</string>
    <string name="actual_problem_code">Actual Problem Code:</string>
    <string name="cause_code">Cause Code:</string>
    <string name="remedy_code">Remedy Code:</string>
    <string name="other_fault">Other Fault:</string>
    <string name="third_party_fault">3rd Party Fault</string>
    <string name="third_party_fault_comments">3rd Party Fault Comments:</string>
    <string name="add_third_party_information">Add 3rd Party Information</string>
    <string name="part_replacement">Part Replacement:</string>
    <string name="required_part_placement">Required Part Replacement</string>
    <string name="scan_faulty_parts">Scan Faulty Part:</string>
    <string name="scan_replacement_parts">Scan Replacement Part:</string>
    <string name="component_id">Component ID:</string>

    <!-- CM value for step-2 (third party information) Telco -->
    <string name="telco">Telco</string>
    <string name="telco_no">Telco No:</string>
    <string name="docker_no">Docker No:</string>
    <string name="ct_personnel">CT Personnel:</string>
    <string name="refer_date_time">Refer Date/Time:</string>
    <string name="expected_completion_date_time">Expected Completion Date/Time:</string>
    <string name="clearance_date_time">Clearance Date/Time</string>
    <string name="telco_fault_status">Telco Fault Status:</string>
    <string name="telco_officer">Telco Officer</string>
    <string name="action_date_time">Action Date/Time:</string>
    <string name="action_taken_by_telco">Action Taken By Telco:</string>

    <!-- CM value for step-2 (third party information) Power Grid -->
    <string name="power_grid">Power Grid</string>
    <string name="power_grid_no">Power Grid No:</string>
    <string name="power_grid_fault_status">Power Grid Fault Status:</string>
    <string name="remarks_on_telco_fault">Remarks on Power Grid Fault:</string>
    <string name="power_grid_officer">Power Grid Officer</string>
    <string name="action_taken_by_power_grid">Action Taken By Power Grid</string>

    <!-- CM value for step-2 (third party information) Power Grid -->
    <string name="others">Others</string>
    <string name="fault_status">Fault Status:</string>
    <string name="remarks">Remarks:</string>
    <string name="third_party_company_name">3rd Party Company Name:</string>
    <string name="third_party_contractor_name">3rd Party Contractor Name:</string>
    <string name="third_party_contractor_no">3rd Party Contractor No:</string>

    <!-- CM value for step-3 -->
    <string name="sunny">Sunny</string>
    <string name="cloudy">Cloudy</string>
    <string name="raining">Raining</string>
    <string name="heavy_rain">Heavy Rain</string>

    <!-- PM value for step-1 -->
    <string name="basic_information">Basic Information:</string>
    <string name="mso_status">MSO Status:</string>
    <string name="check_list">Check List:</string>
    <string name="visual_inspection">Visual Inspection</string>
    <string name="desc_visual_inspection">Check for external damages and / or vandalism such as graffiti, posters. Report to Authority immediately if found any and to remove and clean.</string>
    <string name="fault_found">Fault Found:</string>
    <string name="fault_found_remarks">Fault Found Remarks:</string>
    <string name="remark">Remark:</string>
    <string name="attach_post_maintenance_photo">Attach Post-Maintenance Photo:</string>
    <string name="performed_by">Performed by:</string>
    <string name="photo_attachment">Photo Attachment:</string>
    <string name="schedule_start_date_time">Schedule Start Date/Time:</string>
    <string name="schedule_end_date_time">Schedule End Date/Time:</string>
    <string name="actual_start_date_time">Actual Start Date Time:</string>

    <!-- Others -->
    <string name="action_taken_by_contractor">Action Taken By Contractor</string>

    <!-- Button -->
    <string name="save">SAVE</string>
    <string name="job_done">Job Done</string>
    <string name="verify">Verify</string>
    <string name="qr_scan">QR SCAN</string>

    <string name="log_out">Logout</string>

    <!-- edit text message -->
    <string name="text_here">Text here</string>
    <string name="input_text">Input text</string>
    <string name="comment_here">Comment here</string>


</resources>
