<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NFCReadingActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/margin_xlarge"
    android:background="@color/colorPrimary">

    <TextView
        android:text="@string/ready_to_scan"
        android:textSize="@dimen/txt_size_ex_large"
        android:textColor="@color/color_grey_stroke"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:gravity="center"/>

    <ImageView
        android:src="@drawable/ic_nfc_pic"
        android:tint="@color/colorWhite"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"/>

    <TextView
        android:gravity="center"
        android:text="@string/hold_ur_phone_near_nfc"
        android:textColor="@color/color_grey_stroke_dark"
        android:textSize="@dimen/txt_size_normal"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">
        <Button
            android:id="@+id/btnCancel"
            android:background="@drawable/bg_btn_nfc_reading"
            android:text="@string/cancel"
            android:textColor="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height" />
    </LinearLayout>


</LinearLayout>