<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.Completion_PMFragment"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="@dimen/margin_large">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginTop="@dimen/margin_xlarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="10dp"
                app:cardCornerRadius="@dimen/card_corner_radius">

                <LinearLayout
                    android:layout_marginTop="@dimen/margin_xlarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:gravity="center"
                        android:layout_margin="@dimen/margin_small"
                        android:text="@string/work_complete"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <View
                        android:background="@color/colorBlack"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>
                    <TextView
                        android:gravity="center"
                        android:text="@string/start_datetime"
                        android:textColor="@color/color_blue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:gravity="center"
                        android:text="12/05/2019/ 12:00:34"
                        android:textColor="@color/colorLightBlack"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:gravity="center"
                        android:text="@string/end_datetime"
                        android:textColor="@color/color_blue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:gravity="center"
                        android:text="12/05/2019/ 12:00:34"
                        android:textColor="@color/colorLightBlack"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:gravity="center"
                        android:text="@string/remarks"
                        android:textColor="@color/colorBlack"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:gravity="center"
                        android:text="@string/temp_text"
                        android:textAlignment="inherit"
                        android:textColor="@color/colorLightBlack"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <ImageView
            android:src="@drawable/complete"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
</LinearLayout>